MBE-5 Add tests